--- a/Pipfile
+++ b/Pipfile
@@ -5,12 +5,15 @@ name = "pypi"
 
 [packages]
 numpy = "*"
-panda = "*"
 pandas = "*"
 matplotlib = "*"
 sklearn = "*"
+jupyter = "*"
+scipy = "*"
+scikit-learn = "*"
 
 [dev-packages]
+pylint = "*"
 
 [requires]
 python_version = "3.7"
